pod-security-cel/baseline/disallow-capabilities/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: init
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add:
              - AUDIT_WRITE
              - CHOWN
              - MKNOD
      containers:
      - name: add-capabilities
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_CHROOT", "SETUID", "KILL", "SETGID"]
      - name: add-capabilities-again
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add: ["NET_BIND_SERVICE", "SETPCAP", "SETFCAP", "FOWNER"]
            drop:
            - "ALL"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01-new
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: Never
          initContainers:
          - name: init
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add:
                  - AUDIT_WRITE
                  - CHOWN
                  - MKNOD
          containers:
          - name: add-capabilities
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add: ["SYS_CHROOT", "SETUID", "KILL", "SETGID"]
          - name: add-capabilities-again
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add: ["NET_BIND_SERVICE", "SETPCAP", "SETFCAP", "FOWNER"]
                drop:
                - "ALL"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add:
            - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add:
            - DAC_OVERRIDE
      - name: container02
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add:
            - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: ghcr.io/kyverno/test-busybox:1.35
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add:
            - DAC_OVERRIDE
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add:
            - DAC_OVERRIDE
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add:
            - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add:
                - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add:
                - DAC_OVERRIDE
          - name: container02
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add:
                - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: ghcr.io/kyverno/test-busybox:1.35
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add:
                - DAC_OVERRIDE
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add:
                - DAC_OVERRIDE
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add:
                - SETGID
