pod-security-cel/baseline/disallow-capabilities/.chainsaw-test/chainsaw-test-vap.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-capabilities
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-capabilities.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: disallow-capabilities
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - assert:
        file: validatingadmissionpolicy.yaml
    - assert:
        file: validatingadmissionpolicybinding.yaml
  - name: step-03
    try:
    - apply:
        file: pod-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-bad.yaml
